2023-02-05  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-fonts-arphic.tex: added support for some CJK fonts.
	https://github.com/michal-h21/make4ht/issues/105

2023-02-03  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html4.tex (html4.4ht): fixed indentation of TOC entries for
	\paragraph and \subparagraph.

2023-01-24  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex (ooffice.4ht): added missing space in the style
	declaration.

2023-01-20  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex (ooffice.4ht): previous commit introduced bugs
	to the code, which are now being fixed. I forgot to remove some
	percent characters, which led to unclosed attribute values and
	invalid XML.

2023-01-19  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-ooffice.tex (ooffice.4ht, ooffice-mml.4ht): use \prcnt:ch
	instead of \% in style declarations, because it would produce extra
	backslash otherwise (thanks Gareth Walker for the report.

2023-01-12  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-4ht.tex (embedfile-hooks.4ht, usepackage.4ht): declared
	error printing command, to prevent actual error message.
	https://github.com/ho-tex/embedfile/pull/7

	* tex4ht-4ht.tex (embedfile.4ht): added support for the embedfile
	package.
	https://github.com/michal-h21/tex4ebook/issues/99

2023-01-10  Michal Hoftich  <michal.h21@gmail.com>

	* tex4ht-html5.tex (html5.4ht): added default CSS style for sections
	and page dimensions.
	https://puszcza.gnu.org.ua/bugs/?592

2023-01-08  Karl Berry  <karl@freefriends.org>

	* Makefile (common_no_tex4ht_sty): rename to common_no_cond_sty,
	since tex4ht.sty is what is left out. Mention that we also leave
	out mktex4ht.4ht from all, since it's mostly just the list of packages.
	(tex4ht_sty_derived): dependency is now $(common_no_tex4ht_sty).
	(tex4ht_cond4ht_derived): can depend on $(common).
	
	* mktex4ht-cnf.tex,
	* tex4ht-html4.tex (html4.4ht, html4-math.4ht): copyright 2023.
