@@ -227,6 +227,10 @@ derived += $(tex4ht_fonts_stix_derived)
 tex4ht_fonts_stix_derived = \
 	$(ht_fonts_devdir)/unicode/STIX/stix-mathbb.htf
 
+derived += $(tex4ht_fonts_stix2_derived)
+tex4ht_fonts_stix2_derived = \
+	$(ht_fonts_devdir)/unicode/STIX_Two/stix2-mathbb.htf
+
 derived += $(tex4ht_fonts_arphic_derived)
 tex4ht_fonts_arphic_derived = \
 	$(ht_fonts_devdir)/unicode/arphic/bsmiu9d.htf
@@ -452,6 +456,9 @@ $(tex4ht_fonts_mnsymbol_derived): tex4ht-fonts-mnsymbol.tex
 	$(HTTEX) $< ""
 
 $(tex4ht_fonts_stix_derived): tex4ht-fonts-stix.tex
+	$(HTTEX) $< ""
+
+$(tex4ht_fonts_stix2_derived): tex4ht-fonts-stix2.tex
 	$(HTTEX) $< ""
 
 $(tex4ht_fonts_arphic_derived): tex4ht-fonts-arphic.tex
